<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <!-- Header aligned to top -->
        <include layout="@layout/header" />


        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/username"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/formBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_Narration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:textSize="25sp"
                android:background="@drawable/round_textbox"
                android:hint="@string/narration"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/black"
                android:textAlignment="center"
                android:inputType="textMultiLine"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_NextAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:textSize="25sp"
                android:background="@drawable/round_textbox"
                android:hint="@string/hintnextactivity"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/black"
                android:textAlignment="center"
                android:inputType="textMultiLine"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_gravity="end"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:text="@string/submit" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>