<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mellow"
    tools:context=".LoginActivity">

    <!-- Header aligned to top -->
    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activitytitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:layout_marginBottom="40dp"
            android:text="@string/login" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:background="@drawable/round_textbox"
            android:ems="10"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/black"
            android:textAlignment="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:background="@drawable/round_textbox"
            android:textColorHint="@color/black"
            android:ems="10"
            android:visibility="gone"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnNext"
                android:layout_gravity="end"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:text="@string/next" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="120dp"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:text="@string/login" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/SpinKitView.Large.CubeGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>